Fix footer layout when admin stats link is visible

--- a/frontend/stylesheets/styles.scss
+++ b/frontend/stylesheets/styles.scss
@@ -177,6 +177,10 @@ div#not-implemented {
     margin-bottom: 20px;
   }
 
+  &__admin-link {
+    margin: 0;
+  }
+
   & a {
     color: $white;
   }
